<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniversePoint</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="createTeam">Edit Team Rosters</string>
    <string name="title_activity_new_game_menu">NewGameMenu</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="team1">Team 1</string>
    <string name="team2">Bad Guys</string>
    <string name="filler">Fill</string>
    <string name="finishGame">Finish Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score_summary">ScoreSummary</string>
    <string name="team1Score">0</string>
    <string name="team2Score">0</string>
    <string name="teamNameHeader">Team</string>
    <string name="teamScoreHeader">Score</string>
    <string name="teamTurnsHeader">Turnovers</string>
    <string name="nullValue">N/A</string>
    <string name="mainMenu">Main Menu</string>
    <string name="removeError">Cannot go below 0</string>
    <string name="scoreLoadError">Error retrieving game data</string>
    <string name="viewGames">View/Edit Past Games</string>
    <string name="noTeams">No teams here.  Use settings menu to add a team.</string>
    <string name="noPlayers">No players here. Use settings menu to add a player.</string>
    <string name="addNewTeam">Add Team</string>
    <string name="removeTeam">Delete Team</string>
    <string name="removeTeamMsg">Are you sure you want to delete this team?</string>
    <string name="removeGame">Delete Game</string>
    <string name="removeGameMsg">Are you sure you want to delete this game and all associated stats?</string>
    <string name="title_activity_edit_teams">Edit Teams</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nameNotNullToastMessage">Name cannot be empty, the save did not occur.</string>
    <string name="oops">There doesn\'t appear to be anything here</string>
    <string name="addButton">+</string>
    <string name="removeButton">-</string>
    <string name="turnsTitle">Turnovers</string>
    <string name="assistsTitle">Assists</string>
    <string name="scoresTitle">Scores</string>
    <string name="noNotYet">No, not yet.</string>
    <string name="removePlayer">Delete Player</string>
    <string name="removePlayerMsg">Are you sure you want to delete this player?</string>
    <string name="title_activity_edit_players">Edit Players</string>
    <string name="addNewPlayer">New Player</string>
    <string name="playerName">Player Name</string>
    <string name="title_activity_player_view">Player View</string>
    <string name="team1Select">Select Your Team</string>
    <string name="team2Select">Select the Opposing Team</string>
    <string name="gameTeamError">Something went wrong setting up the game. Did you select two teams?</string>
    <string name="uhoh">Something went wrong</string>
    <string name="noGames">No games here. Use the New Game button on the Main menu to start a new game.</string>
    <string name="title_activity_edit_games">Edit Games</string>
    <string name="title_activity_edit_game">Edit Game</string>
    <string name="noOffensiveStats">No stats for this game! Consider removing by long clicking the game on the previous screen.</string>
    <string name="scoredAPoint"> scored a point. </string>
    <string name="assisted"> made an assist. </string>
    <string name="turnover"> had a turnover. </string>
    <string name="removeOffensiveStat">Delete Stat</string>
    <string name="removeOffensiveStatMsg">Are you sure you want to delete this stat?</string>
</resources>
