<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:baselineAligned="false"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >
            
         <LinearLayout android:id="@+id/Team1Layout"
      		android:orientation="vertical"
       	 	android:layout_weight="1"
       		android:layout_height="wrap_content"
        	android:layout_width="0dp">
        
	        <TextView android:id="@+id/team1Name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/titleSize"
		        android:text="@string/team1" />
		
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView android:id="@+id/score1Label"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:layout_weight="1"
	            	android:gravity="center"
	            	android:text="@string/teamScoreHeader" />
	
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView android:id="@+id/team1Score"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:layout_weight="1"
	            	android:textSize="@dimen/scoreSize"
	            	android:gravity="center"
	            	android:text="@string/team1Score" />
	            
	        </LinearLayout>	        
	    </LinearLayout>
	    
	   <LinearLayout android:id="@+id/Team2Layout"
	        android:orientation="vertical"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:layout_width="0dp">
	        
	        <TextView android:id="@+id/team2Name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/titleSize"
		        android:text="@string/team2"/>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView android:id="@+id/score2Label"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:layout_weight="1"
	            	android:gravity="center"
	            	android:text="@string/teamScoreHeader" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView android:id="@+id/team2Score"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:layout_weight="1"
	            	android:gravity="center"
	            	android:textSize="@dimen/scoreSize"
	            	android:text="@string/team2Score" />
	         
	        </LinearLayout>	
	                
	    </LinearLayout>
	    
</LinearLayout>
	