<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- New Game button -->
    <Button android:id="@+id/newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/buttonVerticalMargin"
        android:layout_marginTop="@dimen/buttonVerticalMargin"
        android:layout_marginRight="@dimen/buttonHorizontalMargin"
        android:layout_marginLeft="@dimen/buttonHorizontalMargin"
        android:layout_centerHorizontal="true"
        android:text="@string/newgame"
        android:onClick="createNewGame" />
    
    <!-- Edit Team button -->
    <Button android:id="@+id/createTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/buttonVerticalMargin"
        android:layout_marginTop="@dimen/buttonVerticalMargin"
        android:layout_marginRight="@dimen/buttonHorizontalMargin"
        android:layout_marginLeft="@dimen/buttonHorizontalMargin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/newgame"
        android:text="@string/createTeam"
        android:onClick="createTeam" />
    
    <!--  View/Edit Games Button -->
    <Button android:id="@+id/viewGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/buttonVerticalMargin"
        android:layout_marginTop="@dimen/buttonVerticalMargin"
        android:layout_marginRight="@dimen/buttonHorizontalMargin"
        android:layout_marginLeft="@dimen/buttonHorizontalMargin"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createTeam"
        android:text="@string/viewGames"
        android:onClick="viewGames" />
        
</RelativeLayout>
